k8s/whispr/preprod/calls-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calls-service-preprod
  namespace: whispr-preprod
spec:
  type: ClusterIP
  selector:
    app: calls-service
  ports:
    - name: http
      port: 4012
      targetPort: 4012
      protocol: TCP
    - name: grpc
      port: 40012
      targetPort: 40012
      protocol: TCP
